--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ vendor/bundle
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+!/db/development.sqlite3
+!/db/production.sqlite3
 
 # Ignore all logfiles and tempfiles.
 /log/*
